# routes/index.js
@@ -1,12 +1,12 @@
 const express = require('express');
 const router = express.Router();
 const {
-    getAllContacts,
-    getOneContact,
-    createContact,
-    updateContact,
-    deleteContact
-} = require('../controllers/contacts');
+    getAllUsers,
+    getOneUser,
+    createUser,
+    updateUser,
+    deleteUser
+} = require('../controllers/users');
 
 //index route
 router.get('/', (req, res) => {
@@ -16,10 +16,10 @@ router.get('/', (req, res) => {
 });
 
 // // contact routes
-router.get('/contacts', getAllContacts);
-router.get('/contacts/:id', getOneContact);
-router.post('/contacts', createContact);
-router.put('/contacts/:id', updateContact);
-router.delete('/contacts/:id', deleteContact);
+router.get('/users', getAllUsers);
+router.get('/users/:id', getOneUser);
+router.post('/users', createUser);
+router.put('/users/:id', updateUser);
+router.delete('/users/:id', deleteUser);
 
 module.exports = router;
